# AutoAim

./: .gitignore  CMakeLists.txt  README.md  svm_model.xml
enc_temp_folder/534dd4a3c73a4548bc47aa42f66f11/: README.md
include/: armor_def.h  armor_matcher.h  camera_param.h  light_bar_detector.h  number_recognizer.h  pose_solver.h
src/: armor_matcher.cpp  light_bar_detector.cpp  main.cpp  number_recognizer.cpp  pose_solver.cpp
